--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="icon" type="image/x-icon" href="./images/logo.png">
     <title>Quiz App</title>
 </head>
-<body>
-    
+<body class="bg-[#46a9ff] flex justify-center h-screen items-center">
+<div class="card px-10 py-10 bg-[white] rounded-md">
+  <h1 class="text-2xl mb-4">Simple Quiz</h1>
+  <hr class="h-[2px] bg-[black] mb-[20px]">
+  <span>Question goes here</span>
+
+  <div>
+    <span class=" block w-[500px] mt-4 hover:bg-[black] hover:text-white cursor-pointer leading-[45px] rounded-md pl-3 h-[45px] border border-[black]">Answer 1</span>
+    <span class=" block w-[500px] mt-4 hover:bg-[black] hover:text-white cursor-pointer leading-[45px] rounded-md pl-3 h-[45px] border border-[black]">Answer 1</span>
+    <span class=" block w-[500px] mt-4 hover:bg-[black] hover:text-white cursor-pointer leading-[45px] rounded-md pl-3 h-[45px] border border-[black]">Answer 1</span>
+    <span class=" block w-[500px] mt-4 hover:bg-[black] hover:text-white cursor-pointer leading-[45px] rounded-md pl-3 h-[45px] border border-[black]">Answer 1</span>
+  </div>
+  <button class="w-[100px] h-[35px] mx-auto block mt-5 hover:bg-[black] hover:text-white border border-[black] rounded-md">Next</button>
+</div>
 </body>
 <script src="./js/script.js"></script>
 </html>
